--- a/triviapp/templates/tests/test-connection.yaml
+++ b/triviapp/templates/tests/test-connection.yaml
@@ -4,6 +4,7 @@ kind: Pod
 metadata:
   name: "{{ include "triviafrontend-service.fullname" . }}-test-connection"
   labels:
+    app.kubernetes.io/stack: {{ include "triviafrontend.fullname" . }}
     {{- include "triviapp.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test-success
@@ -22,6 +23,7 @@ kind: Pod
 metadata:
   name: "{{ include "triviabackend-service.fullname" . }}-test-connection"
   labels:
+    app.kubernetes.io/stack: {{ include "triviabackend.fullname" . }}
     {{- include "triviapp.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test-success
